--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Choose Your Salad!</title>
     <link
       rel="canonical"
-      href="https://andre-deveau.github.io/ICS2O-PWA-Template/"
+      href="https://andre-deveau.github.io/ICS20-Assignment-4/"
     />
-    <link rel="manifest" href="/ICS2O-PWA-Template/manifest.webmanifest" />
+    <link rel="manifest" href="/ICS20-Assignment-4/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
