--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <option value="6.99">Medium Salad (+ $6.99)</option>
             <option value="9.99">Large Salad (+ $9.99)</option>
           </select>
-          <div
+          <label class="mdl-textfield__label" for="Salad-Size"
+            >Select Salad Size</label
             class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
           >
             <select
@@ -86,21 +87,14 @@
             >
               <option></option>
               <option value="Ranch Dressing">Ranch Dressing (+ $4.99)</option>
-              <option value="Bleu Cheese Dressing ">
-                Bleu Cheese Dressing (+ $9.99)
-              </option>
+              <option value="Bleu Cheese Dressing ">Bleu Cheese Dressing (+ $9.99)</option>
               <option value="Caesar Dressing">Caesar Dressing (+ $1.99)</option>
-              <option value="Italian Dressing">
-                Italian Dressing (+ $19.99)
-              </option>
+              <option value="Italian Dressing">Italian Dressing (+ $19.99)</option>
             </select>
             <label class="mdl-textfield__label" for="Salad-Dressing"
               >Select Salad Dressing</label
             >
           </div>
-          <label class="mdl-textfield__label" for="Salad-Size"
-            >Select Salad Size</label
-          >
           <p>Do you want Delivery?</p>
           <div id="radio-buttons">
             <label
