--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
             <option value="6.99">Medium Salad (+ $6.99)</option>
             <option value="9.99">Large Salad (+ $9.99)</option>
           </select>
-          <label class="mdl-textfield__label" for="Salad-Size"
-            >Select Salad Size</label
-            class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-          >
+          <label class="mdl-textfield__label" for="Salad-Size">Select Salad Size</label>
+            <label class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"></label>
             <select
               class="mdl-textfield__input"
               id="Salad-Dressing"
