--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
             name="Salad Dressing"
           >
             <option></option>
-            <option value="Ranch Dressing">Ranch Dressing (+ $4.99)</option>
-            <option value="Bleu Cheese Dressing ">
+            <option value="4.99">Ranch Dressing (+ $4.99)</option>
+            <option value="9.99">
               Bleu Cheese Dressing (+ $9.99)
             </option>
-            <option value="Caesar Dressing">Caesar Dressing (+ $1.99)</option>
-            <option value="Italian Dressing">
+            <option value="1.99">Caesar Dressing (+ $1.99)</option>
+            <option value="19.99">
               Italian Dressing (+ $19.99)
             </option>
           </select>
